refactor inventions to devices
