# pages/api/v1/swagger.json
@@ -33,8 +33,8 @@
       "description": "All info about Characters"
     },
     {
-      "name": "Inventions",
-      "description": "All info about Inventions"
+      "name": "devices",
+      "description": "All info about Devices"
     }
   ],
   "schemes": ["https"],
@@ -100,12 +100,10 @@
           },
           "description": "An array of urls of albums"
         },
-        "images": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "An array of urls of images"
+        "image": {
+          "type": "string",
+
+          "description": "url of portrait image"
         },
         "birthDate": {
           "type": "integer",
